# stac-semantic-search

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  helm-publish.yml
frontend/: Dockerfile  docker-compose.yml  requirements.txt  streamlit_app.py
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
stac_search/: __init__.py  api.py  cache.py  catalog_manager.py  load.py
stac_search/agents/: collections_search.py  items_search.py
